Fixing menu and language button alignment and swedish image name

--- a/cai_2012/style-mobile.css
+++ b/cai_2012/style-mobile.css
@@ -87,12 +87,21 @@ body {
   top: 50%;
 }
 
+#mobile-menu img {
+  top: 5%;
+}
+
 #mobile-language {
   padding-top: 5px;
 }
 
+#mobile-language img {
+  bottom: 10%;
+}
+
 .header-button {
   width: 70%;
+  position: absolute;
 }
 
 #mobile-logo {
